manifests/opa/constraint-requirelabel.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-secure-comm
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces: ["task2"]
  parameters:
    message: "Deployments must have the 'secure-comm' label for secure communication policy."
    labels:
      - key: "secure-comm"
